Bug 333873 - Varying Endpoints in Straight Line Tool doesn't do anything.
Summary: Varying Endpoints in Straight Line Tool doesn't do anything.
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-04-25 13:45 UTC by wolthera
Modified: 2014-07-01 11:01 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description wolthera 2014-04-25 13:45:29 UTC
Maybe this is me misunderstanding how to use it, but it does nothing. I searched around, but also no bug-report.

I'd expect it to mean that the start pressure and the end pressure are used for rendering the stroke, but no dice.

I suppose this can be worked around by using assistants, but it be nice if the button worked.

Reproducible: Always
Comment 1 Halla Rempt 2014-05-03 09:44:47 UTC
Yes, it should interpolate between the four options along the line, and it doesn't, so it's broken :-(
Comment 2 Dmitry Kazakov 2014-07-01 11:01:49 UTC
Git commit 4a69efca51e9b728d3eb4d518ba18173c9f3bb08 by Dmitry Kazakov.
Committed on 01/07/2014 at 09:33.
Pushed by dkazakov into branch 'master'.

[FEATURE] Pressure sensitive line tool

Now when you draw the line tool, the preview is updated automatically,
more than that, you can control pressure and other sensors on the fly!

What's more, now you can use all the complicated sensors and mirroring
with the line tool!
CCMAIL:kimageshop@kde.org

M  +4    -0    krita/image/kis_global.h
M  +18   -5    krita/image/kis_simple_stroke_strategy.cpp
M  +6    -1    krita/image/kis_simple_stroke_strategy.h
M  +1    -0    krita/plugins/tools/defaulttools/CMakeLists.txt
M  +56   -75   krita/plugins/tools/defaulttools/kis_tool_line.cc
M  +18   -10   krita/plugins/tools/defaulttools/kis_tool_line.h
A  +153  -0    krita/plugins/tools/defaulttools/kis_tool_line_helper.cpp     [License: GPL (v2+)]
A  +54   -0    krita/plugins/tools/defaulttools/kis_tool_line_helper.h     [License: GPL (v2+)]
M  +20   -7    krita/ui/tool/kis_painting_information_builder.cpp
M  +17   -3    krita/ui/tool/kis_painting_information_builder.h
M  +6    -2    krita/ui/tool/kis_tool.h
M  +1    -1    krita/ui/tool/kis_tool_freehand.cc
M  +1    -1    krita/ui/tool/kis_tool_freehand.h
M  +80   -12   krita/ui/tool/kis_tool_freehand_helper.cpp
M  +28   -0    krita/ui/tool/kis_tool_freehand_helper.h
M  +10   -5    krita/ui/tool/strokes/kis_painter_based_stroke_strategy.cpp

http://commits.kde.org/calligra/4a69efca51e9b728d3eb4d518ba18173c9f3bb08