[FEATURE] Pressure sensitive line tool

Now when you draw the line tool, the preview is updated automatically,
more than that, you can control pressure and other sensors on the fly!

What's more, now you can use all the complicated sensors and mirroring
with the line tool!

BUG:333873
CCMAIL:kimageshop@kde.org